<resources>
    <string name="app_name">HeroList</string>
    <string name="hero_name">Hero name</string>
    <string name="stat_intelligence">Intelligence </string>
    <string name="stat_intelligence_simple">Int: </string>
    <string name="stat_strength">Strength</string>
    <string name="stat_strength_simple">Str: </string>
    <string name="stat_speed">Speed</string>
    <string name="stat_speed_simple">Spe: </string>
    <string name="stat_durability">Durability</string>
    <string name="stat_durability_simple">Dur: </string>
    <string name="stat_power">Power</string>
    <string name="stat_power_simple">Pow: </string>
    <string name="stat_combat">Combat</string>
    <string name="stat_combat_simple">Com: </string>
    <string name="avatar_description">Hero avatar</string>
    <string name="appearance">Appearance</string>
    <string name="gender">Gender</string>
    <string name="race">Race</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="eyeColor">Eye Color</string>
    <string name="hairColor">Hair Color</string>
    <string name="biography">Biography</string>
    <string name="fullName">Full Name</string>
    <string name="alterEgos">Alter Egos</string>
    <string name="aliases">Aliases</string>
    <string name="placeOfBirth">Place Of Birth</string>
    <string name="firstAppearance">First Appearance</string>
    <string name="publisher">Publisher</string>
    <string name="alignment">Alignment</string>
    <string name="work">Work</string>
    <string name="occupation">Occupation</string>
    <string name="base">Base</string>
    <string name="connections">Connections</string>
    <string name="groupAffiliation">Group Affiliation</string>
    <string name="relatives">Relatives</string>
</resources>