<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/fav_hero"
                style="?android:attr/starStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tvHeroName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hero_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvIntelligence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stat_intelligence" />

                <TextView
                    android:id="@+id/tvStrength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stat_strength" />

                <TextView
                    android:id="@+id/tvSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stat_speed" />

                <TextView
                    android:id="@+id/tvDurability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stat_durability" />

                <TextView
                    android:id="@+id/tvPower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stat_power" />

                <TextView
                    android:id="@+id/tvCombat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stat_combat" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tvAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appearance"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender" />

                <TextView
                    android:id="@+id/tvHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/height" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvRace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/race" />

                <TextView
                    android:id="@+id/tvWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/weight" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvHair"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hairColor" />

                <TextView
                    android:id="@+id/tvEyes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/eyeColor" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tvBiography"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biography"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullName" />

            <TextView
                android:id="@+id/tvAliases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aliases" />

            <TextView
                android:id="@+id/tvPlaceOfBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeOfBirth" />

            <TextView
                android:id="@+id/tvFirstAppearence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstAppearance" />

            <TextView
                android:id="@+id/tvPublisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publisher" />

            <TextView
                android:id="@+id/tvAlignment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alignment" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tvWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvOccupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/occupation" />

            <TextView
                android:id="@+id/tvBase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/base" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tvConnections"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connections"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvGroupAff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groupAffiliation" />

            <TextView
                android:id="@+id/tvRelatives"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/relatives" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>